--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "^3.0.0",
     "redux": "^4.0.1",
     "redux-promise-middleware": "^6.1.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "toaster-js": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
