--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-promise-middleware": "^6.1.0",
     "styled-components": "^4.2.0",
     "toaster-js": "^2.2.0"
